# coding-agent-skill-library

./: .cursorignore  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTIC_CODING_GLOBAL_SAFETY.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  LICENSE  NOTICE  README.md  SECURE_AGENTIC_DEVELOPMENT.md  SECURITY.md  SECURITY_HARDENING.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backlog/: agile-user-story-template.md  tdd-execution-plan.md
configs/: skills_kg.yaml
docs/: PUBLIC_REPO_READINESS.md  README.md
examples/: README.md
neo4j/: skills_connectivity_checks.cypher  skills_gds_connectivity_checks.cypher  skills_schema.cypher
schemas/: README.md
scripts/: admin_skill_ingest.py  apply_phase1_descriptions.py  apply_phase2_verification.py  apply_phase3_normalisation.py  apply_phase4_dataops_overlay.py  apply_phase5_kg_split.py  benchmark_mcp_tools.py  build_retrieval_projections.py  check_neo4j_readiness.py  ci_ingest_gate.py  ci_local.sh  configure_github_repo_settings.sh  embed_skill_chunks.py  evaluate_skill_retrieval.py  experiment_semantic_retrieval.py  extract_skills_graph.py  generate_golden_queries.py  install_git_hooks.sh  krag_cutover_acceptance.py  load_skills_neo4j.py  map_skills_bridges.py  pre_commit_check.sh  pre_public_secret_scan.py  report_skill_usage.py  retrieve_skills_hybrid.py  rollup_skill_usage.py  run_e2e_retrieval_eval.py  skill_section_mapping.py  skills_api.py  skills_config.py  skills_contracts.py  skills_inventory.py  skills_mcp_server.py  skills_metrics.py  skills_ollama.py  skills_query_graph.py  skills_router.py  skills_usage.py  suggest_skills.py  validate_docs.py  (+8 more)
skills/: MANIFEST.md  PACK_METADATA.json  README.md
skills-ui/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
skills_docs/: CHANGELOG.md  CURSOR_IDE_SETUP.md  DROP_IN_BOOTSTRAP.md  GAP_CLOSE_BACKLOG.md  GETTING_STARTED.md  HOW_TO_FIND_THE_RIGHT_SKILL.md  LIBRARY_CONTRACT.md  README.md  SKILLS_KG_MCP_RUNBOOK.md  SKILL_AUTHORING_GUIDE.md  SKILL_LIBRARY_IMPROVEMENT_PLAN.md  enterprise-integration-patterns.md
tests/: conftest.py  test_admin_skill_ingest.py  test_agent_journeys.py  (+44 more)
(+410 files in other folders)
