[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-skill-library"
version = "0.1.8"
description = "Neo4j-backed coding-agent skills knowledge graph and MCP service."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "mcp>=1.28.1,<2",
  "neo4j>=5.20,<6",
  "pyshacl>=0.31,<1",
  "prometheus-client>=0.25,<1",
  "pydantic>=2.7,<3",
  "python-multipart>=0.0.9,<1",
  "PyYAML>=6,<7",
  "rdflib>=7,<8",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7,<2",
  "mypy>=1.10,<2",
  "pre-commit>=4,<5",
  "pytest>=9,<10",
  "pytest-cov>=5,<8",
  "pytest-xdist>=3,<4",
  "ruff>=0.6,<1",
  "types-PyYAML>=6,<7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
testpaths = ["tests"]
markers = [
  "unit: fast unit and contract tests",
  "integration: integration tests that do not require external services",
  "live_neo4j: tests that require a disposable live Neo4j service",
  "eval_pr: PR-tier offline retrieval eval (realistic + abstention tiers)",
  "slow: nightly retrieval eval (coverage arm, golden-union runner)",
  "e2e: end-to-end service or protocol tests",
]
filterwarnings = [
  "ignore:'asyncio.iscoroutinefunction' is deprecated.*:DeprecationWarning:neo4j\\..*",
  "ignore:Using `httpx` with `starlette.testclient` is deprecated.*:Warning:fastapi\\.testclient",
]

[tool.coverage.run]
branch = true
source = ["scripts"]
omit = ["scripts/apply_phase*.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["scripts/apply_phase*.py"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
files = ["scripts"]
exclude = "^scripts/apply_phase.*\\.py$"
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
